logs/git-svn-helpers.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/git_svn_helpers-0.9.egg-info'...
Listing './lib/python3.5/site-packages/gitsvnhelpers'...
Compiling './lib/python3.5/site-packages/gitsvnhelpers/commands.py'...
***   File "./lib/python3.5/site-packages/gitsvnhelpers/commands.py", line 49
    print "fetching %s" % package
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gitsvnhelpers/gitify.py'...
***   File "./lib/python3.5/site-packages/gitsvnhelpers/gitify.py", line 40
    print "This only works on svn checkouts!"
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/gitsvnhelpers/testing.py'...
***   File "./lib/python3.5/site-packages/gitsvnhelpers/testing.py", line 113
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/gitsvnhelpers/tests'...
Compiling './lib/python3.5/site-packages/gitsvnhelpers/utils.py'...
***   File "./lib/python3.5/site-packages/gitsvnhelpers/utils.py", line 89
    print "This only works on svn checkouts!"
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/jarn'...
Listing './lib/python3.5/site-packages/jarn/mkrelease'...
Listing './lib/python3.5/site-packages/jarn/mkrelease/tests'...
Listing './lib/python3.5/site-packages/jarn.mkrelease-4.1.dist-info'...
Listing './lib/python3.5/site-packages/lazy'...
Listing './lib/python3.5/site-packages/lazy/tests'...
Listing './lib/python3.5/site-packages/lazy-1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools_git'...
Listing './lib/python3.5/site-packages/setuptools_git-1.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools_hg-0.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools_subversion-3.1.egg-info'...
Listing './lib/python3.5/site-packages/wheel'...
Listing './lib/python3.5/site-packages/wheel/signatures'...
Listing './lib/python3.5/site-packages/wheel/tool'...
Listing './lib/python3.5/site-packages/wheel-0.30.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
